--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Grace Tveit",
   "license": "ISC",
   "devDependencies": {
+    "@prisma/client": "^2.21.2",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "next": "^10.1.3",
