--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prisma": "^2.21.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   }
 }
