--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^2.21.2",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "dotenv": "^8.2.0",
     "next": "^10.1.3",
     "prisma": "^2.21.2",
     "react": "^17.0.2",
